@@ -1,17 +1,12 @@
 package com.badbones69.crazyenchantments.paper.api.objects;
 
 import com.badbones69.crazyenchantments.paper.CrazyEnchantments;
-import com.badbones69.crazyenchantments.paper.Methods;
-import com.badbones69.crazyenchantments.paper.Starter;
 import com.badbones69.crazyenchantments.paper.api.SkullCreator;
-import com.badbones69.crazyenchantments.paper.utilities.misc.ColorUtils;
+import com.ryderbelserion.cluster.bukkit.items.utils.DyeUtils;
+import com.ryderbelserion.cluster.bukkit.utils.LegacyLogger;
+import com.ryderbelserion.cluster.bukkit.utils.LegacyUtils;
 import de.tr7zw.changeme.nbtapi.NBTItem;
-import net.kyori.adventure.text.Component;
-import net.kyori.adventure.text.format.NamedTextColor;
-import org.bukkit.Color;
-import org.bukkit.DyeColor;
-import org.bukkit.Material;
-import org.bukkit.NamespacedKey;
+import org.bukkit.*;
 import org.bukkit.block.Banner;
 import org.bukkit.block.banner.Pattern;
 import org.bukkit.block.banner.PatternType;
@@ -20,12 +15,13 @@ import org.bukkit.entity.EntityType;
 import org.bukkit.inventory.ItemFlag;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.*;
-import org.bukkit.persistence.PersistentDataType;
+import org.bukkit.inventory.meta.trim.ArmorTrim;
+import org.bukkit.inventory.meta.trim.TrimMaterial;
+import org.bukkit.inventory.meta.trim.TrimPattern;
+import org.bukkit.plugin.java.JavaPlugin;
 import org.bukkit.potion.PotionData;
 import org.bukkit.potion.PotionEffectType;
 import org.bukkit.potion.PotionType;
-import org.jline.utils.Log;
-
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -35,9 +31,11 @@ public class ItemBuilder {
 
     // Item Data
     private Material material;
+    private TrimMaterial trimMaterial;
+    private TrimPattern trimPattern;
     private int damage;
     private String itemName;
-    private final List<Component> itemLore;
+    private final List<String> itemLore;
     private int itemAmount;
 
     // Player
@@ -76,6 +74,10 @@ public class ItemBuilder {
     private boolean isBanner;
     private List<Pattern> patterns;
 
+    // Maps
+    private boolean isMap;
+    private Color mapColor;
+
     // Placeholders
     private HashMap<String, String> namePlaceholders;
     private HashMap<String, String> lorePlaceholders;
@@ -87,8 +89,6 @@ public class ItemBuilder {
     // Custom Data
     private int customModelData;
     private boolean useCustomModelData;
-    private NamespacedKey nameSpacedKey;
-    private String nameSpacedData;
 
     /**
      * Create a blank item builder.
@@ -96,6 +96,8 @@ public class ItemBuilder {
     public ItemBuilder() {
         this.nbtItem = null;
         this.material = Material.STONE;
+        this.trimMaterial = null;
+        this.trimPattern = null;
         this.damage = 0;
         this.itemName = "";
         this.itemLore = new ArrayList<>();
@@ -127,19 +129,18 @@ public class ItemBuilder {
         this.isBanner = false;
         this.patterns = new ArrayList<>();
 
+        this.isMap = false;
+        this.mapColor = Color.RED;
+
         this.namePlaceholders = new HashMap<>();
         this.lorePlaceholders = new HashMap<>();
 
         this.itemFlags = new ArrayList<>();
     }
 
-    private final CrazyEnchantments plugin = CrazyEnchantments.getPlugin();
+    private final CrazyEnchantments plugin = JavaPlugin.getPlugin(CrazyEnchantments.class);
 
-    private final Starter starter = plugin.getStarter();
-
-    private final Methods methods = starter.getMethods();
-
-    private final SkullCreator skullCreator = starter.getSkullCreator();
+    private final SkullCreator skullCreator = this.plugin.getStarter().getSkullCreator();
 
     /**
      * Deduplicate an item builder.
@@ -149,6 +150,8 @@ public class ItemBuilder {
     public ItemBuilder(ItemBuilder itemBuilder) {
         this.nbtItem = itemBuilder.nbtItem;
         this.material = itemBuilder.material;
+        this.trimMaterial = itemBuilder.trimMaterial;
+        this.trimPattern = itemBuilder.trimPattern;
         this.damage = itemBuilder.damage;
         this.itemName = itemBuilder.itemName;
         this.itemLore = new ArrayList<>(itemBuilder.itemLore);
@@ -184,6 +187,9 @@ public class ItemBuilder {
         this.isBanner = itemBuilder.isBanner;
         this.patterns = new ArrayList<>(itemBuilder.patterns);
 
+        this.isMap = itemBuilder.isMap;
+        this.mapColor = itemBuilder.mapColor;
+
         this.namePlaceholders = new HashMap<>(itemBuilder.namePlaceholders);
         this.lorePlaceholders = new HashMap<>(itemBuilder.lorePlaceholders);
         this.itemFlags = new ArrayList<>(itemBuilder.itemFlags);
@@ -193,114 +199,127 @@ public class ItemBuilder {
      * Gets the nbt item.
      */
     public NBTItem getNBTItem() {
-        nbtItem = new NBTItem(build());
-
-        return nbtItem;
+        this.nbtItem = new NBTItem(build());
+        return this.nbtItem;
     }
 
     /**
      * Gets the material.
      */
     public Material getMaterial() {
-        return material;
+        return this.material;
+    }
+
+    /**
+     * @return trim material
+     */
+    public TrimMaterial getTrimMaterial() {
+        return this.trimMaterial;
     }
 
     /**
      * Checks if the item is a banner.
      */
     public boolean isBanner() {
-        return isBanner;
+        return this.isBanner;
     }
 
     /**
      * Checks if an item is a shield.
      */
     public boolean isShield() {
-        return isShield;
+        return this.isShield;
     }
 
     /**
      * Checks if the item is a spawn mob egg.
      */
     public boolean isMobEgg() {
-        return isMobEgg;
+        return this.isMobEgg;
     }
 
     /**
      * Returns the player name.
      */
     public String getPlayerName() {
-        return player;
+        return this.player;
     }
 
     /**
      * Get the entity type of the spawn mob egg.
      */
     public EntityType getEntityType() {
-        return entityType;
+        return this.entityType;
     }
 
     /**
      * Get the name of the item.
      */
     public String getName() {
-        return itemName;
+        return this.itemName;
     }
 
     /**
      * Get the lore on the item.
      */
-    public List<Component> getLore() {
-        return itemLore;
+    public List<String> getLore() {
+        return this.itemLore;
     }
 
     /**
      * Returns the enchantments on the Item.
      */
     public HashMap<Enchantment, Integer> getEnchantments() {
-        return enchantments;
+        return this.enchantments;
     }
 
     /**
      * Return a list of Item Flags.
      */
     public List<ItemFlag> getItemFlags() {
-        return itemFlags;
+        return this.itemFlags;
     }
 
     /**
      * Checks if flags are hidden.
      */
     public boolean isItemFlagsHidden() {
-        return hideItemFlags;
+        return this.hideItemFlags;
     }
 
     /**
      * Check if item is Leather Armor
      */
     public boolean isLeatherArmor() {
-        return isLeatherArmor;
+        return this.isLeatherArmor;
     }
 
     /**
      * Checks if item is glowing.
      */
     public boolean isGlowing() {
-        return glowing;
+        return this.glowing;
     }
 
     /**
      * Checks if the item is unbreakable.
      */
     public boolean isUnbreakable() {
-        return unbreakable;
+        return this.unbreakable;
+    }
+
+    /**
+     * Returns the amount of the item stack.
+     */
+    public Integer getAmount() {
+        return this.itemAmount;
     }
 
     /**
      * Get the patterns on the banners.
      */
     public List<Pattern> getPatterns() {
-        return patterns;
+        return this.patterns;
     }
 
     /**
@@ -309,13 +328,19 @@ public class ItemBuilder {
      * @return The name with all the placeholders in it.
      */
     public String getUpdatedName() {
-        String newName = itemName;
+        String newName = this.itemName;
 
-        for (Map.Entry<String, String> placeholder : namePlaceholders.entrySet()) {
-            newName = newName.replace(placeholder.getKey(), placeholder.getValue()).replace(placeholder.getKey().toLowerCase(), placeholder.getValue());
+        for (String placeholder : this.namePlaceholders.keySet()) {
+            newName = newName.replace(placeholder, namePlaceholders.get(placeholder)).replace(placeholder.toLowerCase(), this.namePlaceholders.get(placeholder));
         }
 
         return newName;
+    }
+
+    private boolean isArmor() {
+        String name = this.material.name();
+
+        return name.endsWith("_HELMET") || name.endsWith("_CHESTPLATE") || name.endsWith("_LEGGINGS") || name.endsWith("_BOOTS") || name.equals(Material.TURTLE_HELMET.name());
     }
 
     /**
@@ -324,101 +349,102 @@ public class ItemBuilder {
      * @return The result of all the info that was given to the builder as an ItemStack.
      */
     public ItemStack build() {
+        if (this.nbtItem != null) this.referenceItem = this.nbtItem.getItem();
 
-        if (nbtItem != null) referenceItem = nbtItem.getItem();
+        ItemStack item = this.referenceItem;
 
-        ItemStack item = referenceItem != null ? referenceItem : new ItemStack(material);
+        if (item == null) item = new ItemStack(this.material);
 
         if (item.getType() != Material.AIR) {
-
-            if (isHead) { // Has to go 1st due to it removing all data when finished.
-                if (isHash) { // Sauce: https://github.com/deanveloper/SkullCreator
-                    if (isURL) {
-                        skullCreator.itemWithUrl(item, player);
+            if (this.isHead) { // Has to go 1st due to it removing all data when finished.
+                if (this.isHash) { // Sauce: https://github.com/deanveloper/SkullCreator
+                    if (this.isURL) {
+                        this.skullCreator.itemWithUrl(item, this.player);
                     } else {
-                        skullCreator.itemWithBase64(item, player);
+                        this.skullCreator.itemWithBase64(item, this.player);
                     }
                 }
             }
 
-            item.setAmount(itemAmount);
+            item.setAmount(this.itemAmount);
             ItemMeta itemMeta = item.getItemMeta();
-            List<Component> newLore = getUpdatedLore();
-            assert itemMeta != null;
-            if (!Objects.equals(getUpdatedName(), "")) itemMeta.displayName(ColorUtils.legacyTranslateColourCodes(getUpdatedName()));
-            if (!newLore.isEmpty()) itemMeta.lore(newLore);
-            if (nameSpacedData != null && nameSpacedKey != null) itemMeta.getPersistentDataContainer().set(nameSpacedKey, PersistentDataType.STRING, nameSpacedData);
+            itemMeta.setDisplayName(getUpdatedName());
+            itemMeta.setLore(getUpdatedLore());
 
-            if (itemMeta instanceof org.bukkit.inventory.meta.Damageable) ((org.bukkit.inventory.meta.Damageable) itemMeta).setDamage(damage);
-
-            if (isPotion && (potionType != null || potionColor != null)) {
-                PotionMeta potionMeta = (PotionMeta) itemMeta;
-
-                if (potionType != null) potionMeta.setBasePotionData(new PotionData(potionType));
-
-                if (potionColor != null) potionMeta.setColor(potionColor);
+            if (isArmor()) {
+                if (this.trimPattern != null && this.trimMaterial != null) {
+                    ((ArmorMeta) itemMeta).setTrim(new ArmorTrim(this.trimMaterial, this.trimPattern));
+                }
             }
 
-            if (material == Material.TIPPED_ARROW && potionType != null) {
-                PotionMeta potionMeta = (PotionMeta) itemMeta;
-                potionMeta.setBasePotionData(new PotionData(potionType));
+            if (this.isMap) {
+                MapMeta mapMeta = (MapMeta) itemMeta;
+
+                if (this.mapColor != null) mapMeta.setColor(this.mapColor);
             }
 
-            if (isLeatherArmor && armorColor != null) {
+            if (itemMeta instanceof Damageable) {
+                if (this.damage >= 1) {
+                    if (this.damage >= item.getType().getMaxDurability()) {
+                        ((Damageable) itemMeta).setDamage(item.getType().getMaxDurability());
+                    } else {
+                        ((Damageable) itemMeta).setDamage(this.damage);
+                    }
+                }
+            }
+
+            if (this.isPotion && (this.potionType != null || this.potionColor != null)) {
+                PotionMeta potionMeta = (PotionMeta) itemMeta;
+
+                if (this.potionType != null) potionMeta.setBasePotionData(new PotionData(this.potionType));
+
+                if (this.potionColor != null) potionMeta.setColor(this.potionColor);
+            }
+
+            if (this.material == Material.TIPPED_ARROW && this.potionType != null) {
+                PotionMeta potionMeta = (PotionMeta) itemMeta;
+                potionMeta.setBasePotionData(new PotionData(this.potionType));
+
+                if (this.potionColor != null) potionMeta.setColor(this.potionColor);
+            }
+
+            if (this.isLeatherArmor && this.armorColor != null) {
                 LeatherArmorMeta leatherMeta = (LeatherArmorMeta) itemMeta;
-                leatherMeta.setColor(armorColor);
+                leatherMeta.setColor(this.armorColor);
             }
 
-            if (isBanner && !patterns.isEmpty()) {
+            if (this.isBanner && !this.patterns.isEmpty()) {
                 BannerMeta bannerMeta = (BannerMeta) itemMeta;
-                bannerMeta.setPatterns(patterns);
+                bannerMeta.setPatterns(this.patterns);
             }
 
-            if (isShield && !patterns.isEmpty()) {
+            if (this.isShield && !this.patterns.isEmpty()) {
                 BlockStateMeta shieldMeta = (BlockStateMeta) itemMeta;
                 Banner banner = (Banner) shieldMeta.getBlockState();
-                banner.setPatterns(patterns);
+                banner.setPatterns(this.patterns);
                 banner.update();
                 shieldMeta.setBlockState(banner);
             }
 
-            if (useCustomModelData) itemMeta.setCustomModelData(customModelData);
+            if (this.useCustomModelData) itemMeta.setCustomModelData(this.customModelData);
 
-            itemFlags.forEach(itemMeta :: addItemFlags);
+            this.itemFlags.forEach(itemMeta :: addItemFlags);
             item.setItemMeta(itemMeta);
             hideItemFlags(item);
-            item.addUnsafeEnchantments(enchantments);
+            item.addUnsafeEnchantments(this.enchantments);
             addGlow(item);
             NBTItem nbt = new NBTItem(item);
 
-            if (isHead && !isHash) nbt.setString("SkullOwner", player);
+            if (this.isHead && !this.isHash) nbt.setString("SkullOwner", this.player);
 
-            if (isMobEgg) {
-                if (entityType != null) nbt.addCompound("EntityTag").setString("id", "minecraft:" + entityType.name());
+            if (this.isMobEgg) {
+                if (this.entityType != null) nbt.addCompound("EntityTag").setString("id", "minecraft:" + this.entityType.name());
             }
 
             return nbt.getItem();
         } else {
             return item;
         }
-    }
-
-    /*
-      Class based extensions.
-     */
-
-    /**
-     * Get a clone of the object.
-     * @return a new cloned object.
-     */
-    public ItemBuilder copy() {
-        try {
-            return (ItemBuilder) super.clone();
-        } catch (CloneNotSupportedException e) {
-            Log.error(e);
-        }
-
-        return new ItemBuilder();
     }
 
     /**
@@ -430,6 +456,17 @@ public class ItemBuilder {
     public ItemBuilder setMaterial(Material material) {
         this.material = material;
         this.isHead = material == Material.PLAYER_HEAD;
+        return this;
+    }
+
+    public ItemBuilder setTrimMaterial(TrimMaterial trimMaterial) {
+        this.trimMaterial = trimMaterial;
+
+        return this;
+    }
+
+    public ItemBuilder setTrimPattern(TrimPattern trimPattern) {
+        this.trimPattern = trimPattern;
 
         return this;
     }
@@ -462,17 +499,17 @@ public class ItemBuilder {
                 this.damage = Integer.parseInt(metaData);
             } else { // Value is something else.
                 this.potionType = getPotionType(PotionEffectType.getByName(metaData));
-                this.potionColor = ColorUtils.getColor(metaData);
-                this.armorColor = ColorUtils.getColor(metaData);
+                this.potionColor = DyeUtils.getColor(metaData);
+                this.armorColor = DyeUtils.getColor(metaData);
+                this.mapColor = DyeUtils.getColor(metaData);
             }
-
         } else if (material.contains("#")) {
-            String[] materialSplit = material.split("#");
-            material = materialSplit[0];
+            String[] b = material.split("#");
+            material = b[0];
 
-            if (isInt(materialSplit[1])) { // Value is a number.
+            if (isInt(b[1])) { // Value is a number.
                 this.useCustomModelData = true;
-                this.customModelData = Integer.parseInt(materialSplit[1]);
+                this.customModelData = Integer.parseInt(b[1]);
             }
         }
 
@@ -486,6 +523,7 @@ public class ItemBuilder {
             case "LEATHER_HELMET", "LEATHER_CHESTPLATE", "LEATHER_LEGGINGS", "LEATHER_BOOTS", "LEATHER_HORSE_ARMOR" -> this.isLeatherArmor = true;
             case "BANNER" -> this.isBanner = true;
             case "SHIELD" -> this.isShield = true;
+            case "FILLED_MAP" -> this.isMap = true;
         }
 
         if (this.material.name().contains("BANNER")) this.isBanner = true;
@@ -499,17 +537,7 @@ public class ItemBuilder {
      */
     public ItemBuilder setDamage(int damage) {
         this.damage = damage;
-
         return this;
-    }
-
-    /**
-     * Get the damage to the item.
-     *
-     * @return The damage to the item as an int.
-     */
-    public int getDamage() {
-        return damage;
     }
 
     /**
@@ -517,7 +545,7 @@ public class ItemBuilder {
      * @return The ItemBuilder with an updated name.
      */
     public ItemBuilder setName(String itemName) {
-        if (itemName != null) this.itemName = itemName;
+        if (itemName != null) this.itemName = LegacyUtils.color(itemName);
 
         return this;
     }
@@ -528,7 +556,6 @@ public class ItemBuilder {
      */
     public ItemBuilder setNamePlaceholders(HashMap<String, String> placeholders) {
         this.namePlaceholders = placeholders;
-
         return this;
     }
 
@@ -541,7 +568,6 @@ public class ItemBuilder {
      */
     public ItemBuilder addNamePlaceholder(String placeholder, String argument) {
         this.namePlaceholders.put(placeholder, argument);
-
         return this;
     }
 
@@ -553,7 +579,6 @@ public class ItemBuilder {
      */
     public ItemBuilder removeNamePlaceholder(String placeholder) {
         this.namePlaceholders.remove(placeholder);
-
         return this;
     }
 
@@ -564,20 +589,12 @@ public class ItemBuilder {
      * @return The ItemBuilder with updated info.
      */
     public ItemBuilder setLore(List<String> lore) {
-        return lore(lore.stream().map(ColorUtils::legacyTranslateColourCodes).collect(Collectors.toList()));
-    }
-
-    /**
-     * Set the lore of the item in the builder. This will auto force color in all the lores that contains color code. (&a, &c, &7, etc...)
-     *
-     * @param lore The lore of the item in the builder.
-     * @return The ItemBuilder with updated info.
-     */
-    public ItemBuilder lore(List<Component> lore) {
         if (lore != null) {
             this.itemLore.clear();
 
-            this.itemLore.addAll(lore);
+            for (String line : lore) {
+                this.itemLore.add(LegacyUtils.color(line));
+            }
         }
 
         return this;
@@ -590,8 +607,7 @@ public class ItemBuilder {
      * @return The ItemBuilder with updated info.
      */
     public ItemBuilder addLore(String lore) {
-        if (lore != null) this.itemLore.add(ColorUtils.legacyTranslateColourCodes(lore));
-
+        if (lore != null) this.itemLore.add(LegacyUtils.color(lore));
         return this;
     }
 
@@ -603,7 +619,6 @@ public class ItemBuilder {
      */
     public ItemBuilder setLorePlaceholders(HashMap<String, String> placeholders) {
         this.lorePlaceholders = placeholders;
-
         return this;
     }
 
@@ -616,7 +631,6 @@ public class ItemBuilder {
      */
     public ItemBuilder addLorePlaceholder(String placeholder, String argument) {
         this.lorePlaceholders.put(placeholder, argument);
-
         return this;
     }
 
@@ -625,15 +639,15 @@ public class ItemBuilder {
      *
      * @return The lore with all placeholders in it.
      */
-    public List<Component> getUpdatedLore() {
-        List<Component> newLore = new ArrayList<>();
+    public List<String> getUpdatedLore() {
+        List<String> newLore = new ArrayList<>();
 
-        for (Component line : itemLore) {
-            String newLine = ColorUtils.toLegacy(line);
-            for (Map.Entry<String, String> placeholder : lorePlaceholders.entrySet()) {
-                newLine = newLine.replace(placeholder.getKey(), placeholder.getValue()).replace(placeholder.getKey().toLowerCase(), placeholder.getValue());
+        for (String item : this.itemLore) {
+            for (String placeholder : this.lorePlaceholders.keySet()) {
+                item = item.replace(placeholder, this.lorePlaceholders.get(placeholder)).replace(placeholder.toLowerCase(), this.lorePlaceholders.get(placeholder));
             }
-            newLore.add(ColorUtils.legacyTranslateColourCodes(newLine));
+
+            newLore.add(item);
         }
 
         return newLore;
@@ -647,7 +661,6 @@ public class ItemBuilder {
      */
     public ItemBuilder removeLorePlaceholder(String placeholder) {
         this.lorePlaceholders.remove(placeholder);
-
         return this;
     }
 
@@ -657,7 +670,6 @@ public class ItemBuilder {
      */
     public ItemBuilder setEntityType(EntityType entityType) {
         this.entityType = entityType;
-
         return this;
     }
 
@@ -673,7 +685,7 @@ public class ItemBuilder {
             for (PatternType pattern : PatternType.values()) {
 
                 if (split[0].equalsIgnoreCase(pattern.name()) || split[0].equalsIgnoreCase(pattern.getIdentifier())) {
-                    DyeColor color = getDyeColor(split[1]);
+                    DyeColor color = DyeUtils.getDyeColor(split[1]);
 
                     if (color != null) addPattern(new Pattern(color, pattern));
 
@@ -689,7 +701,6 @@ public class ItemBuilder {
      */
     public ItemBuilder addPatterns(List<String> patterns) {
         patterns.forEach(this :: addPatterns);
-
         return this;
     }
 
@@ -698,8 +709,7 @@ public class ItemBuilder {
      * @return The ItemBuilder with an updated pattern.
      */
     public ItemBuilder addPattern(Pattern pattern) {
-        patterns.add(pattern);
-
+        this.patterns.add(pattern);
         return this;
     }
 
@@ -709,16 +719,7 @@ public class ItemBuilder {
      */
     public ItemBuilder setPattern(List<Pattern> patterns) {
         this.patterns = patterns;
-
         return this;
-    }
-
-    /**
-     * The amount of the item stack in the builder.
-     * @return The amount that is set in the builder.
-     */
-    public int getAmount() {
-        return itemAmount;
     }
 
     /**
@@ -727,18 +728,6 @@ public class ItemBuilder {
      */
     public ItemBuilder setAmount(Integer amount) {
         this.itemAmount = amount;
-
-        return this;
-    }
-
-    /**
-     * Get the amount of the item stack in the builder.
-     * @param amount The amount that is in the item stack.
-     * @return The ItemBuilder with updated info.
-     */
-    public ItemBuilder addAmount(int amount) {
-        this.itemAmount += amount;
-
         return this;
     }
 
@@ -751,9 +740,9 @@ public class ItemBuilder {
     public ItemBuilder setPlayerName(String playerName) {
         this.player = playerName;
 
-        if (player != null && player.length() > 16) {
+        if (player != null && this.player.length() > 16) {
             this.isHash = true;
-            this.isURL = player.startsWith("http");
+            this.isURL = this.player.startsWith("http");
         }
 
         return this;
@@ -778,9 +767,8 @@ public class ItemBuilder {
      * @param level The level of the enchantment ( Unsafe levels included )
      * @return The ItemBuilder with updated enchantments.
      */
-    public ItemBuilder addEnchantments(Enchantment enchantment, Integer level) {
+    public ItemBuilder addEnchantments(Enchantment enchantment, int level) {
         this.enchantments.put(enchantment, level);
-
         return this;
     }
 
@@ -792,7 +780,6 @@ public class ItemBuilder {
      */
     public ItemBuilder removeEnchantments(Enchantment enchantment) {
         this.enchantments.remove(enchantment);
-
         return this;
     }
 
@@ -803,12 +790,12 @@ public class ItemBuilder {
      * @return The ItemBuilder with updated info.
      */
     public ItemBuilder setFlagsFromStrings(List<String> flagStrings) {
-        itemFlags.clear();
+        this.itemFlags.clear();
 
         for (String flagString : flagStrings) {
             ItemFlag flag = getFlag(flagString);
 
-            if (flag != null) itemFlags.add(flag);
+            if (flag != null) this.itemFlags.add(flag);
         }
 
         return this;
@@ -836,8 +823,7 @@ public class ItemBuilder {
     public ItemBuilder addFlags(String flagString) {
         ItemFlag flag = getFlag(flagString);
 
-        if (flag != null) itemFlags.add(flag);
-
+        if (flag != null) this.itemFlags.add(flag);
         return this;
     }
 
@@ -848,7 +834,7 @@ public class ItemBuilder {
      * @return The ItemBuilder with an updated ItemFlag.
      */
     public ItemBuilder addItemFlag(ItemFlag itemFlag) {
-        if (itemFlag != null) itemFlags.add(itemFlag);
+        if (itemFlag != null) this.itemFlags.add(itemFlag);
 
         return this;
     }
@@ -861,7 +847,6 @@ public class ItemBuilder {
      */
     public ItemBuilder setItemFlags(List<ItemFlag> itemFlags) {
         this.itemFlags = itemFlags;
-
         return this;
     }
 
@@ -871,7 +856,6 @@ public class ItemBuilder {
      */
     public ItemBuilder hideItemFlags(boolean hideItemFlags) {
         this.hideItemFlags = hideItemFlags;
-
         return this;
     }
 
@@ -880,10 +864,9 @@ public class ItemBuilder {
      * @return The ItemBuilder with an updated Item.
      */
     public ItemStack hideItemFlags(ItemStack item) {
-        if (hideItemFlags) {
-            if (item != null && item.hasItemMeta()) {
+        if (this.hideItemFlags) {
+            if (item != null && item.hasItemMeta() && item.getItemMeta() != null) {
                 ItemMeta itemMeta = item.getItemMeta();
-                assert itemMeta != null;
                 itemMeta.addItemFlags(ItemFlag.values());
                 item.setItemMeta(itemMeta);
                 return item;
@@ -901,7 +884,6 @@ public class ItemBuilder {
      */
     private ItemBuilder setReferenceItem(ItemStack referenceItem) {
         this.referenceItem = referenceItem;
-
         return this;
     }
 
@@ -911,7 +893,6 @@ public class ItemBuilder {
      */
     public ItemBuilder setUnbreakable(boolean unbreakable) {
         this.unbreakable = unbreakable;
-
         return this;
     }
 
@@ -921,34 +902,6 @@ public class ItemBuilder {
      */
     public ItemBuilder setGlow(boolean glow) {
         this.glowing = glow;
-
-        return this;
-    }
-
-    /**
-     * The text that will be displayed on the item.
-     *
-     * @param texture The skull texture.
-     * @param profileUUID The uuid of the profile.
-     * @return The ItemBuilder.
-     */
-    public ItemBuilder texture(String texture, UUID profileUUID) {
-        return this;
-    }
-
-    /**
-     * @param texture The skull texture.
-     * @return The ItemBuilder.
-     */
-    public ItemBuilder texture(String texture) {
-        return this;
-    }
-
-    /**
-     * @param texture The owner of the skull.
-     * @return The ItemBuilder.
-     */
-    public ItemBuilder owner(String texture) {
         return this;
     }
 
@@ -963,15 +916,12 @@ public class ItemBuilder {
     public static ItemBuilder convertItemStack(ItemStack item) {
         ItemBuilder itemBuilder = new ItemBuilder().setReferenceItem(item).setAmount(item.getAmount()).setMaterial(item.getType()).setEnchantments(new HashMap<>(item.getEnchantments()));
 
-        if (item.hasItemMeta()) {
+        if (item.hasItemMeta() && item.getItemMeta() != null) {
             ItemMeta itemMeta = item.getItemMeta();
-
-            assert itemMeta != null;
-            itemBuilder.setName(itemMeta.getDisplayName()).lore(itemMeta.lore());
-
+            itemBuilder.setName(itemMeta.getDisplayName()).setLore(itemMeta.getLore());
             NBTItem nbt = new NBTItem(item);
 
-            if (nbt.hasKey("Unbreakable")) itemBuilder.setUnbreakable(nbt.getBoolean("Unbreakable"));
+            if (nbt.hasTag("Unbreakable")) itemBuilder.setUnbreakable(nbt.getBoolean("Unbreakable"));
 
             if (itemMeta instanceof org.bukkit.inventory.meta.Damageable) itemBuilder.setDamage(((org.bukkit.inventory.meta.Damageable) itemMeta).getDamage());
         }
@@ -1014,10 +964,23 @@ public class ItemBuilder {
                             itemBuilder.setAmount(1);
                         }
                     }
-                    case "lore" -> itemBuilder.setLore(List.of(value.split(",")));
+                    case "damage" -> {
+                        try {
+                            itemBuilder.setDamage(Integer.parseInt(value));
+                        } catch (NumberFormatException e) {
+                            itemBuilder.setDamage(itemBuilder.material.getMaxDurability());
+                        }
+                    }
+                    case "lore" -> itemBuilder.setLore(Arrays.asList(value.split(",")));
                     case "player" -> itemBuilder.setPlayerName(value);
                     case "unbreakable-item" -> {
                         if (value.isEmpty() || value.equalsIgnoreCase("true")) itemBuilder.setUnbreakable(true);
+                    }
+                    case "trim-pattern" -> {
+                        if (!value.isEmpty()) itemBuilder.setTrimPattern(Registry.TRIM_PATTERN.get(NamespacedKey.minecraft(value.toLowerCase())));
+                    }
+                    case "trim-material" -> {
+                        if (!value.isEmpty()) itemBuilder.setTrimMaterial(Registry.TRIM_MATERIAL.get(NamespacedKey.minecraft(value.toLowerCase())));
                     }
                     default -> {
                         Enchantment enchantment = getEnchantment(option);
@@ -1039,21 +1002,18 @@ public class ItemBuilder {
                         try {
                             for (PatternType pattern : PatternType.values()) {
                                 if (option.equalsIgnoreCase(pattern.name()) || value.equalsIgnoreCase(pattern.getIdentifier())) {
-                                    DyeColor color = getDyeColor(value);
+                                    DyeColor color = DyeUtils.getDyeColor(value);
                                     if (color != null) itemBuilder.addPattern(new Pattern(color, pattern));
                                     break;
                                 }
                             }
-                        } catch (Exception ignored) {
-                        }
+                        } catch (Exception ignored) {}
                     }
                 }
             }
-        } catch (Exception e) {
-            itemBuilder.setMaterial(Material.RED_TERRACOTTA).setName("&c&lERROR")
-                    .lore(Arrays.asList(Component.text("There us an error", NamedTextColor.RED),
-                            Component.text("For : " + (placeHolder != null ? placeHolder : ""), NamedTextColor.RED)));
-            Log.error(e);
+        } catch (Exception exception) {
+            itemBuilder.setMaterial(Material.RED_TERRACOTTA).setName("&c&lERROR").setLore(Arrays.asList("&cThere is an error", "&cFor : &c" + (placeHolder != null ? placeHolder : "")));
+            LegacyLogger.warn("There is an error with " + placeHolder, exception);
         }
 
         return itemBuilder;
@@ -1086,10 +1046,10 @@ public class ItemBuilder {
      * @param item The item to add glow to.
      */
     private void addGlow(ItemStack item) {
-        if (glowing) {
+        if (this.glowing) {
             try {
-                if (item != null) {
-                    if (item.getItemMeta() != null) {
+                if (item != null && item.getItemMeta() != null) {
+                    if (item.hasItemMeta()) {
                         if (item.getItemMeta().hasEnchants()) return;
                     }
 
@@ -1138,27 +1098,6 @@ public class ItemBuilder {
                 return PotionType.WATER_BREATHING;
             } else if (type.equals(PotionEffectType.WEAKNESS)) {
                 return PotionType.WEAKNESS;
-            }
-        }
-
-        return null;
-    }
-
-    /**
-     * Get the dye color from a string.
-     *
-     * @param color The string of the color.
-     * @return The dye color from the string.
-     */
-    public static DyeColor getDyeColor(String color) {
-        if (color != null) {
-            try {
-                return DyeColor.valueOf(color.toUpperCase());
-            } catch (Exception e) {
-                try {
-                    String[] rgb = color.split(",");
-                    return DyeColor.getByColor(Color.fromRGB(Integer.parseInt(rgb[0]), Integer.parseInt(rgb[1]), Integer.parseInt(rgb[2])));
-                } catch (Exception ignore) {}
             }
         }
 
@@ -1258,17 +1197,5 @@ public class ItemBuilder {
         }
 
         return null;
-    }
-
-    /**
-     * @param key The name spaced key value.
-     * @param data The data that the key holds.
-     * @return The ItemBuilder with an updated item count.
-     */
-    public ItemBuilder setStringPDC(NamespacedKey key, String data) {
-        this.nameSpacedKey = key;
-        this.nameSpacedData = data;
-
-        return this;
     }
 }
